scratch def cleanup

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-    "orgName": "Dreamin Keynote Company",
+    "orgName": "Presenter Magic",
     "edition": "Developer",
     "orgPreferences" : {
         "enabled": ["S1DesktopEnabled"],
