--- a/.forceignore
+++ b/.forceignore
@@ -2,4 +2,6 @@
 # More information: https://developer.salesforce.com/docs/atlas.en-us.sfdx_dev.meta/sfdx_dev/sfdx_dev_exclude_source.htm
 #
 **profiles
+**quickActions
+**layouts
 package.xml
